--- a/branches/sso/of/of/app/views/news/_www_news.html.erb
+++ b/branches/sso/of/of/app/views/news/_www_news.html.erb
@@ -33,6 +33,6 @@
   <%=link_to _('More...'), more_link, :class => "more" %>
 </div>
 <%=auto_discovery_link_tag(:rss, rss_link,
-  {:title => s_("Feed|%{name} %{type} Feed") % {:name => _('Daily News'), :type => 'RSS'} }) %>
+  { :title => s_( "Feed|#{ _( 'Daily News' ) } RSS Feed" ) } ) %>
 <% rescue %>
 <% end %>
