--- a/branches/sso/of/of/app/views/projects/_new_projects.html.erb
+++ b/branches/sso/of/of/app/views/projects/_new_projects.html.erb
@@ -17,10 +17,10 @@
 <%=link_to _('More...'), projects_path() + "?sortdesc=listing-created_at", :class => "more" %>
 <%=auto_discovery_link_tag(:rss, 
    {:format => :rss, :controller => :projects, :action => :new_projects_feed},
-   {:title => s_("Feed|%{name} %{type} Feed") % {:name => _('New Projects'), :type => 'RSS'} }) %>
+   { :title => _( "Feed|#{ _( 'New Projects' ) } RSS Feed" ) } ) %>
 <%=auto_discovery_link_tag(:atom, 
    {:format => :xml, :controller => :projects, :action => :new_projects_feed},
-   {:title => s_("Feed|%{name} %{type} Feed") % {:name => _('New Projects'), :type => 'ATOM'} }) %>
+   { :title => _( "Feed|#{ _( 'New Projects' ) } ATOM Feed" ) } ) %>
 <% end -%>
 
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
