--- a/branches/sso/of/of/app/views/projects/role_users.html.erb
+++ b/branches/sso/of/of/app/views/projects/role_users.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @role.name %></h3>
 <% form_tag :action => 'set_role', :id => @project do %>
-  <label for="user"><%= _('Role|Set as ') % {:role => @role.name} %>:</label><br/>
+  <label for="user"><%= _('Role|Set as ')"#{ @role.name }" %>:</label><br/>
   <%= hidden_field_tag 'role', @role.name %>
   <%= text_field_tag 'user', '' ,{:size => 20 } %> 
   <%= submit_tag _('Role|Add') %>
