--- a/branches/sso/of/of/app/views/news/_listn.html.erb
+++ b/branches/sso/of/of/app/views/news/_listn.html.erb
@@ -19,10 +19,10 @@
 <%=link_to _('More...'), project_news_path(), :class => "more" %>
 <%=auto_discovery_link_tag(:rss,
    {:format => :rss, :controller => :news, :action => :new_project_news_feed},
-   {:title => s_("Feed|%{name} %{type} Feed") % {:name => _('Project News'), :type => 'RSS'} }) %>
+   {:title => s_("Feed|#{ _( 'Project News' ) } RSS Feed") } ) %>
 <%=auto_discovery_link_tag(:atom,
    {:format => :xml, :controller => :news, :action => :new_project_news_feed},
-	 {:title => s_("Feed|%{name} %{type} Feed") % {:name => _("Project News"), :type => 'ATOM'} }) %>
+   {:title => s_("Feed|#{ _( 'Project News' ) } ATOM Feed") } ) %>
 <% end -%>
 
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'}  %>
