--- a/branches/sso/of/of/app/views/partials/_home_menu.html.erb
+++ b/branches/sso/of/of/app/views/partials/_home_menu.html.erb
@@ -13,7 +13,7 @@
   <li><%= link_to _('menu_Project News'), project_news_path() %></li>
   <li><%= link_to _('menu_Latest Releases'), latest_releases_path %></li>
   <li><%= link_to _('menu_Top Downloads'), top_releases_path %></li>
-  <li><%= link_to _('menu_Help Wanted'), list_jobs_path %></li>
+  <li><%= link_to _('menu_Help Wanted'), "#{ root_path }jobs" %> </li>
   <li><%= link_to _('menu_WebHosting'), webhosting_index_path %></li>
   <li class="parent active"><a href='#' onClick="Effect.toggle('bsc_menu0', 'blind', {duration: 0.3}); return false"><%= _('Help') %></a>
   <div id="bsc_menu0" style="display:none">
