--- a/branches/sso/of/of/app/views/releases/_new_releases.html.erb
+++ b/branches/sso/of/of/app/views/releases/_new_releases.html.erb
@@ -18,10 +18,10 @@
 <%= link_to _("More..."), {:controller => 'releases', :action => 'latest'}, :class => "more" %>
 <%=auto_discovery_link_tag(:rss,
    {:format => :rss, :controller => :releases, :action => "new_release_feed"},
-   {:title => s_("Feed|%{name} %{type} Feed") % {:name => _("Latest Releases"), :type => 'RSS'} }) %>
+   { :title => s_( "Feed|#{ _( 'Lastest Releases' ) } RSS Feed" ) } ) %>
 <%=auto_discovery_link_tag(:atom,
    {:format => :xml, :controller => :releases, :action => "new_release_feed"},
-   {:title => s_("Feed|%{name} %{type} Feed") % {:name => _("Latest Releases"), :type => 'ATOM'} }) %>
+   { :title => s_( "Feed|#{ _( 'Lastest Releases' ) } ATOM Feed" ) } ) %>
 <% end -%>
 
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
