--- a/branches/sso/of/of/app/views/projects/show.html.erb
+++ b/branches/sso/of/of/app/views/projects/show.html.erb
@@ -14,11 +14,11 @@
 <table>
   <tr>
     <td>
-      <%= link_to "<span>#{_('Downloads')}</span>", download1_path(:project_id => @project.id), :class => 'readon' %>
+      <%= link_to "<span class='pj_download'>#{_('Download Now')}</span>", download1_path(:project_id => @project.id) %>
     </td>
     <td>
-      <%#= link_to "<span>#{_('Bug Report')}</span>", rt1_path(:project_id => @project.id), :class => 'readon' %>
-      <%= link_to "<span>#{_('Bug Report')}</span>", "../../rt/Ticket/Create.html?Queue=#{@project.id}", :class => 'readon' %>
+      <%= link_to "<span class='pj_bugreport'>#{_('Bug Report')}</span>", rt1_path(:project_id => @project.id) %>
+      <%#= link_to "<span>#{_('Bug Report')}</span>", "../../rt/Ticket/Create.html?Queue=#{@project.id}", :class => 'readon' %>
     </td>
   </tr>
 </table>
