--- a/branches/sso/of/of/app/views/projects/show.html.erb
+++ b/branches/sso/of/of/app/views/projects/show.html.erb
@@ -11,17 +11,11 @@
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
 
 <% if functions.length == 0 -%>
-<table>
-  <tr>
-    <td>
+  <div>
       <%= link_to "<span class='pj_download'>#{_('Download Now')}</span>", download1_path(:project_id => @project.id) %>
-    </td>
-    <td>
       <%= link_to "<span class='pj_bugreport'>#{_('Bug Report')}</span>", rt1_path(:project_id => @project.id) %>
       <%#= link_to "<span>#{_('Bug Report')}</span>", "../../rt/Ticket/Create.html?Queue=#{@project.id}", :class => 'readon' %>
-    </td>
-  </tr>
-</table>
+  </div>
 <% end -%>
 
 <% module_title = capture do %>
