modify the syntax for replacing gettext with i18n

--- a/branches/sso/of/of/app/views/partials/_search.html.erb
+++ b/branches/sso/of/of/app/views/partials/_search.html.erb
@@ -5,7 +5,7 @@
   <%if adv%>
     <a href="#" onclick="Effect.toggle('search_chk','appear');Effect.toggle('search_inc','appear');
      document.getElementById('query_adv').value=''; return false">
-    <%=_('Advensed Options')%>
+    <%=_('Advanced Options')%>
   </a>
     <script>
         s_check = s_and = s_or = s_not = ''; 
