--- a/branches/sso/of/of/app/views/user/welcome.html.erb
+++ b/branches/sso/of/of/app/views/user/welcome.html.erb
@@ -2,9 +2,9 @@
 
 welcom to OpenFoundry!!!
 <br/>
-<%= link_to _('home'), :action => :home %>
+<%= link_to _('Home'), :action => :home %>
 <br/>
-<%= link_to _('logout'), :action => :logout %>
+<%= link_to _('Logout'), :action => :logout %>
 
 
 </div>
