--- a/branches/sso/of/of/app/views/projects/_form.html.erb
+++ b/branches/sso/of/of/app/views/projects/_form.html.erb
@@ -105,7 +105,7 @@ AAA
 
 <fieldset style="clear:both;">
   <legend><%= _("For NSC projects") %>:</legend>
-  <%= _("Please refer to the") %> <b><a href="/help/nsc_project" target="_blank"><%= _("help document") %></a></b>.<br/><br/>
+  <%= _("Please refer to the") %> <b><a href="/help/nsc-project" target="_blank"><%= _("help document") %></a></b>.<br/><br/>
   <label for=\"project_nsccode\"><%= _('Project|Nsccode') %></label> (<%= _('comma seperated') %>)<br/>
   e.g. NSC97-2218-E-123-456
   <%= err(@project, :nsccode, text_field_tag('project[nsccode]', tmp_nsccode, :size => 50)) %>
