--- a/branches/sso/of/of/app/views/partials/_captcha.html.erb
+++ b/branches/sso/of/of/app/views/partials/_captcha.html.erb
@@ -1,5 +1,5 @@
 <% reload ||= 0 -%>
-<p><%= _("In case you were not an alian. Please keyin according the image")%>:</p>
+<p><%= _("Please keyin according the image")%>:</p>
 <input name=captcha_code />
 <%= link_to_remote "[#{_('reload')}#{("("+reload.to_s+")") if reload > 0}]", 
   :url => {:controller => :images, :action => :reload_code_image,
