--- a/branches/sso/of/of/app/views/partials/_project_menu.html.erb
+++ b/branches/sso/of/of/app/views/partials/_project_menu.html.erb
@@ -48,7 +48,7 @@
 
   <% if functions.length > 0 -%>
   <ul id="project_admin_menu" class="menu">
-    <li class="parent active"><a href='#' onclick="Effect.toggle('bsc_menu1','blind', {duration: 0.3}); return false"><%= _('project_Info') %></a></li>
+    <li class="parent"><a href='#' onclick="Effect.toggle('bsc_menu1','blind', {duration: 0.3}); return false"><%= _('project_Info') %></a></li>
       <div id="bsc_menu1" style="display:none">
       <ul>
         <% if functions.include?('project_info') -%>
@@ -65,7 +65,7 @@
     <li><%= link_to _('Wiki'), kwiki_path(:project_id => project.id) %></li>
 
     <% if functions.include?('release') -%>
-    <li class="parent active"><a href='#' onclick="Effect.toggle('rls_menu','blind', {duration: 0.3}); return false"><%= _('release') %></a>
+    <li class="parent"><a href='#' onclick="Effect.toggle('rls_menu','blind', {duration: 0.3}); return false"><%= _('release') %></a>
       <div id="rls_menu" style="display:none">
       <ul>
         <li><%= link_to _('release_Edit'), releases_path(:project_id => project.id) %></li>
@@ -75,7 +75,7 @@
     </li>
     <% end -%>
 
-    <li class="parent active"><a href='#' onclick="Effect.toggle('vcs_menu1','blind', {duration: 0.3}); return false"><%= _('Version Control') %></a>
+    <li class="parent"><a href='#' onclick="Effect.toggle('vcs_menu1','blind', {duration: 0.3}); return false"><%= _('Version Control') %></a>
       <div id="vcs_menu1" style="display:none">
       <ul>
         <% if project.vcs == Project::VCS[:CVS] or project.vcs == Project::VCS[:SUBVERSION] %>
@@ -99,7 +99,7 @@
     <% end -%>
 
     <% if functions.include?('survey') -%>
-      <li class="parent active"><a href='#' onclick="Effect.toggle('svy_menu','blind', {duration: 0.3}); return false"><%= _('project menu|Surveys') %></a>
+      <li class="parent"><a href='#' onclick="Effect.toggle('svy_menu','blind', {duration: 0.3}); return false"><%= _('project menu|Surveys') %></a>
         <div id="svy_menu" style="display:none">
         <ul>
           <li><%= link_to s_('project menu|Surveys Edit'), survey_index_path(:project_id => @project.id)%></li>
