require of library in env.rb or will error in production mode

--- a/branches/sso/of/of/config/environment.rb.erb
+++ b/branches/sso/of/of/config/environment.rb.erb
@@ -88,6 +88,7 @@ Rails::Initializer.run do |config|
 
 
   config.after_initialize {
+    require 'of'
     # add fulltext indexed SEARCH
     # for search in UTF-8
     UTF8_ANALYSIS_REGEX = 
