fix projects member_edit translation missing bug

--- a/branches/sso/of/of/app/views/projects/member_edit.html.erb
+++ b/branches/sso/of/of/app/views/projects/member_edit.html.erb
@@ -19,7 +19,7 @@
     <% drop_class = "ProjectRoleDropDelete" %>
     <% drop_id = "RemoveThisMember" %>
     <div class='<%= drop_class %>' id='<%= drop_id %>'>
-      <%= _('Drop People Here to Remove Them from the group.') %>
+      <%= _('Drop People Here to Remove Them from the group') %>
     </div>
     <%= drop_receiving_element drop_id,
       :onDrop => "function(drag_element, drop_element, event){
