remove old link

--- a/branches/sso/of/of/app/views/partials/_top_menu_data.html.erb
+++ b/branches/sso/of/of/app/views/partials/_top_menu_data.html.erb
@@ -57,7 +57,7 @@ var menudata=
 //        {id:'<%=_('Download PDF')%>', url:'http://rt.openfoundry.org/Foundry/Help/ossf.pdf'}
 //      ]  
 //    },
-    {id:'<%=_('Forum')%>', url:'http://ssodev.openfoundry.org/forum.html?func=showcat&amp;catid=48'
+    {id:'<%=_('Forum')%>', url:'/forum.html?func=showcat&amp;catid=48'
     },
     {id:'<%=_('menu_Contact Us')%>', url:'mailto:contact@openfoundry.org',
       submenu:[
