--- a/branches/sso/of/of/config/environment.rb.erb
+++ b/branches/sso/of/of/config/environment.rb.erb
@@ -62,7 +62,7 @@ Rails::Initializer.run do |config|
   config.gem 'mongrel', :version =>  ">= 1.1.3" 
   config.gem 'rake', :version =>  ">= 0.8.1" 
   config.gem 'packr', :version =>  ">= 3.1.0" 
-  config.gem 'redis'
+  config.gem 'redis', :version => "=0.1.2"
 
   config.time_zone = 'Taipei' 
 
