change static fixed urls to variables(SSO_HOST)

--- a/branches/sso/of/of/app/views/help/vcs.html.erb
+++ b/branches/sso/of/of/app/views/help/vcs.html.erb
@@ -731,14 +731,14 @@ svn export file:///tmp/repos/test release_project<br>
   <a name=使用VIEWVC瀏覽鑄造場檔案庫></a>使用VIEWVC瀏覽鑄造場檔案庫
 </h3>
 <p style=FONT-FAMILY:Arial>
-  使用者欲使用viewvc瀏覽各個版本，可透過網址 http://viewvc.of.openfoundry.org/viewvc
+  使用者欲使用viewvc瀏覽各個版本，可透過網址 http://viewvc.<%=SSO_HOST%>/viewvc
 </p>
 <p style=FONT-FAMILY:Arial>
   <br>
   範例: 瀏覽svn檔案庫
 </p>
 <p style=FONT-FAMILY:Arial>
-  操作:使用瀏覽器開啟網址"http://viewvc.of.openfoundry.org/viewvc"，接著在"Repository"中選擇欲瀏覽的專案。
+  操作:使用瀏覽器開啟網址"http://viewvc.<%=SSO_HOST%>/viewvc"，接著在"Repository"中選擇欲瀏覽的專案。
 </p>
 <p style=FONT-FAMILY:Arial>
 </p>
