--- a/branches/sso/of/of/app/views/user_notify/change_email.html.erb
+++ b/branches/sso/of/of/app/views/user_notify/change_email.html.erb
@@ -1,7 +1,7 @@
 <p>
 Dear User, this message is from <%= @app_name %><br />
 <br />
-You had change your email address on 'of.openfoundry.org'.<br />
+You had change your email address on '<%=SSO_HOST%>'.<br />
 <br />
 <br />
 NOTICE!<br /> 
