--- a/branches/sso/of/of/app/views/projects/vcs_access.html.erb
+++ b/branches/sso/of/of/app/views/projects/vcs_access.html.erb
@@ -7,7 +7,7 @@ when Project::VCS[:SUBVERSION]
   <br/><b><%= @src %></b>
 </p>
 <p><%= auto_link(simple_format(h(@vcs_desc))) %></p>
-<p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB"><%= _('Subversion Access|See More') %></a>.</p>
+<p><a href="http://<%=SSO_HOST%>/of/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB"><%= _('Subversion Access|See More') %></a>.</p>
 
 <% when Project::VCS[:CVS] -%>
 <h1><%= _('Anonymous CVS Access') %></h1>
@@ -16,7 +16,7 @@ when Project::VCS[:SUBVERSION]
   <br/><b><%= @src %></b>
 </p>
 <p><%= auto_link(simple_format(h(@vcs_desc))) %></p>
-<p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
+<p><a href="http://<%=SSO_HOST%>/of/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
   AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB"><%= _('Subversion Access|See More') %></a>.</p>
 
 <% when Project::VCS[:SUBVERSION_CLOSE] -%>
