--- a/branches/sso/of/of/app/views/user_notify/test.text.html.rhtml
+++ b/branches/sso/of/of/app/views/user_notify/test.text.html.rhtml
@@ -1,8 +1,8 @@
 <table>
   <tr>
     <td>
-<a href="http://of.openfoundry.org">
-  <img src="http://of.openfoundry.org/images/logo.gif" />
+<a href="http://<%=SSO_HOST%>/of">
+  <img src="http://<%=SSO_HOST%>/of/images/logo.gif" />
 </a>
 </td>
 </tr>
