delect nsc project help

--- a/branches/sso/of/of/app/views/partials/_home_menu.html.erb
+++ b/branches/sso/of/of/app/views/partials/_home_menu.html.erb
@@ -19,7 +19,7 @@
   <div id="bsc_menu0" style="display:none">
   <ul>
     <li><%= link_to 'OpenFoundry', '/help/how-to-start' %></li>
-    <li><%= link_to _('NSC Project'), '/help/nsc-project' %></li>
+    <!--<li><%#= link_to _('NSC Project'), '/help/nsc-project' %></li>-->
     <li><%= link_to _('menu_License Wizard'), '/help/license-wizard' %></li>
     <li><%= link_to _('Forum'), '/help/openfoundry-forum' %></li>
   </ul>
