add websvn link

--- a/branches/sso/of/of/config/initializers/openfoundry.rb.erb
+++ b/branches/sso/of/of/config/initializers/openfoundry.rb.erb
@@ -7,6 +7,7 @@ site_path='<%=host%>'
 OPENFOUNDRY_SITE_ADMIN_EMAIL = '<%=site_admin_mail%>'
 OPENFOUNDRY_SITEMAIL_BATCH_MAX = 500
 OPENFOUNDRY_SESSION_EXPIRES_AFTER = 8 * 60 * 60 # in seconds
+OPENFOUNDRY_WEBSVN_URL =  "http://#{site_path}/websvn/"
 OPENFOUNDRY_VIEWVC_SVN_URL =  "http://#{site_path}/viewvc-svn/"
 OPENFOUNDRY_VIEWVC_CVS_URL =  "http://#{site_path}/viewvc-cvs/"
 OPENFOUNDRY_OF_URL = "http://#{site_path}"
