--- a/branches/sso/of/of/app/views/site_admin/projects/list.html.erb
+++ b/branches/sso/of/of/app/views/site_admin/projects/list.html.erb
@@ -4,7 +4,7 @@
 #project_list, #project_list th, #project_list td  {border:solid 1px black;}
 </style>
 <%
-project_columns = ["name","summary","description","creator","status","statusreason","licensingdescription","license","contentlicense","contactinfo","maturity","platform","programminglanguage","intendedaudience","rationale","redirecturl","vcs","vcsdescription","project_counter","created_at","updated_at","updated_by","icon"]
+project_columns = ["status","name","summary","description","creator","statusreason","licensingdescription","license","contentlicense","contactinfo","maturity","platform","programminglanguage","intendedaudience","rationale","redirecturl","vcs","vcsdescription","project_counter","created_at","updated_at","updated_by","icon"]
 %>
 <%= paginate = will_paginate @projects %>
 <table id="project_list">
@@ -15,37 +15,47 @@ project_columns = ["name","summary","description","creator","status","statusreas
     <% for column in project_columns %>
       <th><%= _(column) %></th>
     <% end %>
-  
-  
   </tr>
   
 <% for project in @projects %>
     <tr>
-    
       <td><%= link_to _('Show'), site_admin_project_path( :id => project), :target => '_blank' %></td>
       <td><%= link_to _('Edit'), edit_site_admin_project_path( :id => project), :target => '_blank' %></td>
       <td>
-        <% if project.status != Project::STATUS[:REJECTED] %>
-          <%= link_to _('Change status'), change_status_form_site_admin_project_path( :id => project.id), :target => '_blank' %>
-        <% end %>
+        <%= link_to _('Change status'), change_status_form_site_admin_project_path( :id => project.id), :target => '_blank' %>
       </td>
-      <% for column in project_columns %>
+      <% for column in project_columns -%>
         <td style="<%= "white-space:nowrap;" if column == "license"%>">
-          <%if column == 'creator'%>
+          <%if column == 'creator' -%>
             <a href="/user/home/<%=project.send(column)%>"><%=project.send(column)%></a>
-          <%elsif ['description', 'licensingdescription'].index(column) %>
+          <%elsif ['summary', 'description', 'licensingdescription', 'statusreason', 'vcsdescription'].include?(column) -%>
+            <% if not project.send(column).nil? -%>
             <span title="<%=h project.send(column)%>"><%=h project.send(column).mb_chars[0..30]%></span>
-          <%else%>
-          <%=h project.send(column) %>
-          <%end%>
-          <%= "(#{Project.status_to_s(project.status)})" if column == 'status'%>
-          <%= "(#{Project.licenses_to_s(project.license).join('<br/>')})" if column == 'license'%>
-          <%= "(#{Project.content_licenses_to_s(project.contentlicense)})" if column == 'contentlicense'%>
-          <%= "(#{Project.vcs_to_s(project.vcs)})" if column == 'vcs'%>
+            <% end -%>
+          <%elsif column == 'status' -%>
+            <% case project.status
+                when Project::STATUS[:APPLYING] 
+               %><span style="color:red"><%
+                when Project::STATUS[:PENDING] 
+               %><span style="color:orange"><%
+                when Project::STATUS[:REJECTED] 
+               %><span style="color:green"><%
+                when Project::STATUS[:SUSPENDED] 
+               %><span style="color:bule"><%
+            end %> 
+            <%= "#{Project.status_to_s(project.status)}" %>
+            </span>
+          <%elsif column == 'license' -%>
+            <%= "#{Project.licenses_to_s(project.license).join('<br/>')}" %>
+          <%elsif column == 'contentlicense' -%>
+            <%= "#{Project.content_licenses_to_s(project.contentlicense)}" %>
+          <%elsif column == 'vcs' -%>
+            <%= "#{Project.vcs_to_s(project.vcs)}" %>
+          <%else -%>
+            <%=h project.send(column) %>
+          <%end -%>
         </td>
-      <% end %>
-  
-      
+      <% end -%>
   
     </tr>
   
