add target for issue in dashboard

--- a/branches/sso/of/of/app/views/projects/_project_issues.html.erb
+++ b/branches/sso/of/of/app/views/projects/_project_issues.html.erb
@@ -1,7 +1,7 @@
 <% if not rss.items.blank? %>
   <table>
     <% rss.items.each do | item | %>
-      <tr><td><a href='<%=item.link %>'><%=item.title %></a></td></tr>
+      <tr><td><a href='<%=item.link %>' target='_black'><%=item.title %></a></td></tr>
 
       <tr>
         <td>
