--- a/branches/sso/of/of/config/initializers/openfoundry.rb.erb
+++ b/branches/sso/of/of/config/initializers/openfoundry.rb.erb
@@ -4,6 +4,7 @@ OPENFOUNDRY_PROJECT_UPLOAD_PATH = '<%=projects_upload_path%>'
 # TODO: better naming
 
 site_path='<%=host%>'
+OPENFOUNDRY_SITE_NAME = '<%site_name%>'
 OPENFOUNDRY_SITE_ADMIN_EMAIL = '<%=site_admin_mail%>'
 OPENFOUNDRY_SITEMAIL_BATCH_MAX = 500
 OPENFOUNDRY_SESSION_EXPIRES_AFTER = 8 * 60 * 60 # in seconds
