change ftp.www.openfoundry.org or ftp.of.openfoundry.org to ftp.openfoundry.org

--- a/branches/sso/of/of/app/views/releases/uploadfiles.html.erb
+++ b/branches/sso/of/of/app/views/releases/uploadfiles.html.erb
@@ -129,7 +129,7 @@
 <% end %>
       </li>
       <li>FTP(<%= link_to OPENFOUNDRY_FTP_URL+@current_dir, OPENFOUNDRY_FTP_URL+@current_dir, {:target => '_blank'} %>)，FTP上傳後請先「更新清單」。<br/>
-      參閱[<%= link_to _("How to Upload?"), "http://webhosting.openfoundry.org/how_to_upload.html", {:target => '_blank'} %>]
+      參閱[<%= link_to _("How to Upload?"), webhosting_index_path %>]
       </li>
     </ul>
   </li>
