--- a/branches/sso/of/of/app/views/webhosting/how_to_upload.html.erb
+++ b/branches/sso/of/of/app/views/webhosting/how_to_upload.html.erb
@@ -2,7 +2,7 @@
     如何上傳檔案？
     <p>
     對於每個在 <a href="http://<%=SSO_Host%>/of">OpenFoundry (<%=SSO_HOST%>)</a> 上開立的專案，
-    我們提供網址為 <tt>ftp://ftp.<%=SSO_HOST%>/[專案ID]/upload</tt> 的上傳空間，
+    我們提供網址為 <tt>ftp://ftp.openfoundry.org/[專案ID]/upload</tt> 的上傳空間，
     讓專案管理員可以自行放置與該專案預計釋出的檔案，再至網頁挑選檔案進行釋出，FTP提供了較穩定的上傳方式，
     改善了以往網頁無法續傳與上傳不穩定的問題。
     </p>
@@ -16,14 +16,14 @@
     如果您是專案開發網站上的專案管理員，或專案管理者有開放<tt>FTP Access</tt>權限，
     且同意 <a href="term_of_use.html">使用條款</a>，
     即可透過 FTP 或 FTP over TLS 的方式，
-    以專案開發網站上的帳號登入 <tt>ftp.<%=SSO_HOST%></tt> 主機並上傳資料；
+    以專案開發網站上的帳號登入 <tt>ftp.openfoundry.org</tt> 主機並上傳資料；
     登入後，您將會看到所有您具有權限專案的目錄，只要將檔案放置於 upload 目錄下，即可透過專案開發網站釋出。
     </p>
     
     <p>
     UNIX 的使用者可直接透過命令列工具上傳檔案.<br>
-    如: <tt>ftp ftp.<%=SSO_HOST%></tt></br>
-    或: <tt>ftps ftp.<%=SSO_HOST%></tt>
+    如: <tt>ftp ftp.openfoundry.org</tt></br>
+    或: <tt>ftps ftp.openfoundry.org</tt>
     </p>
     
     <p>
