--- a/branches/sso/of/of/config/initializers/openfoundry.rb.erb
+++ b/branches/sso/of/of/config/initializers/openfoundry.rb.erb
@@ -16,7 +16,7 @@ OPENFOUNDRY_RT_URL = "http://#{site_path}/rt/"
 OPENFOUNDRY_SYMPA_URL = "http://#{site_path}/sympa/"
 OPENFOUNDRY_KWIKI_URL = "http://#{site_path}/kwiki/"
 OPENFOUNDRY_HOMEPAGE_URL = "http://%s.openfoundry.org"
-OPENFOUNDRY_FTP_URL = "ftp://ftp.#{site_path}/"
+OPENFOUNDRY_FTP_URL = "ftp://ftp.openfoundry.org/"
 
 OPENFOUNDRY_SITE_ADMIN_RUN_CODE_PATH = "#{RAILS_ROOT}/tmp/run_code.rb"
 # an Enumerable object.  TODO: not only ports but also addresses ?
