--- a/branches/sso/of/of/app/views/webhosting/index.html.erb
+++ b/branches/sso/of/of/app/views/webhosting/index.html.erb
@@ -19,14 +19,14 @@
     如果您是專案開發網站上的專案管理員，或專案管理者有開放<tt>FTP Access</tt>權限，
     且同意 <a href="term_of_use.html">使用條款</a>，
     即可透過 FTP 或 FTP over TLS 的方式，
-    以專案開發網站上的帳號登入 <tt>ftp.<%=SSO_HOST%></tt> 主機並上傳資料；
+    以專案開發網站上的帳號登入 <tt>ftp.openfoundry.org</tt> 主機並上傳資料；
     登入後，您將會看到所有您具有權限專案的目錄，只要將檔案放置於 www 目錄下，
     只要將檔案放置於其下，就可以透過 <tt>http://[專案ID].openfoundry.org</tt> 的網址存取。
     </p>
     <p>
     UNIX 的使用者可直接透過命令列工具上傳檔案.<br>
-    如: <tt>ftp ftp.<%=SSO_HOST%></tt></br>
-    或: <tt>ftps ftp.<%=SSO_HOST%></tt>
+    如: <tt>ftp ftp.openfoundry.org</tt></br>
+    或: <tt>ftps ftp.openfoundry.org</tt>
     </p>
     <p>
     Windows 的使用者可安裝如<a href="http://filezilla.sourceforge.net/">FileZilla</a> 
