--- a/branches/sso/of/of/app/views/partials/_homeleft.html.erb
+++ b/branches/sso/of/of/app/views/partials/_homeleft.html.erb
@@ -1,6 +1,6 @@
 <div id="HomeLeft">
   <%= render :partial => 'openfoundry/staticities',
-             :locals => {:userCount => User.count,
+             :locals => {:userCount => User.count(:conditions => User.verified_users),
                   :projectCount => Project.count(:conditions => Project.in_used_projects())
                   } %>
   <%= render :partial => "partials/home_menu" %>
