show each ticket in the frame of the page

--- a/branches/sso/of/of/app/views/projects/_project_issues.html.erb
+++ b/branches/sso/of/of/app/views/projects/_project_issues.html.erb
@@ -1,7 +1,7 @@
-<% if not rss.items.blank? %>
+<% if rss and not rss.items.blank? %>
   <table>
     <% rss.items.each do | item | %>
-      <tr><td><a href='<%=item.link %>' target='_black'><%=item.title %></a></td></tr>
+      <tr><td><a href="http://<%=SSO_HOST %>/of/projects/<%=item.dc_description %>/rt/<%=item.link %>"><%= h item.title %></a></td></tr>
 
       <tr>
         <td>
