--- a/branches/sso/of/of/app/views/projects/_basic.html.erb
+++ b/branches/sso/of/of/app/views/projects/_basic.html.erb
@@ -29,7 +29,7 @@ end %>
     <table class="list-table">
     <%= rows(0,
       * ([ 
-      _("Project|License"), @project.licenses_to_s.map {|i_s| i_s[0] > 0 ? link_to(i_s[1], _("url_link_for_#{i_s[1]}"), :target => "_blank") : _("#{i_s[1]}")}.join("<br/>\n"), 
+      _("Project|License"), @project.licenses_to_s.map {|i_s| i_s[0] > 0 ? link_to(i_s[1], _("url_link_for_#{i_s[1].gsub('.', '_')}"), :target => "_blank") : _("#{i_s[1]}")}.join("<br/>\n"), 
       _("Project|Programminglanguage"), show_with_seperator(@project.programminglanguage),
       _("Project|Contactinfo"), (h @project.contactinfo),  
       ] ) )
