--- a/branches/sso/of/of/app/views/projects/show.html.erb
+++ b/branches/sso/of/of/app/views/projects/show.html.erb
@@ -10,13 +10,13 @@
 <% end %>
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
 
-<% if functions.length == 0 -%>
+<%# if functions.length == 0 -%>
   <div>
       <%= link_to "<span class='pj_download'>#{_('Download Now')}</span>", download1_path(:project_id => @project.id) %>
-      <%= link_to "<span class='pj_bugreport'>#{_('Bug Report')}</span>", rt1_path(:project_id => @project.id) %>
+      <%= link_to "<span class='pj_bugreport'>#{_('Bug Report')}</span>", report_rt_path(:project_id => @project.id) %>
       <%#= link_to "<span>#{_('Bug Report')}</span>", "../../rt/Ticket/Create.html?Queue=#{@project.id}", :class => 'readon' %>
   </div>
-<% end -%>
+<%# end -%>
 
 <% module_title = capture do %>
   <%=_( 'Project Issues' ) %>
