--- a/branches/sso/of/of/app/views/projects/applied.html.erb
+++ b/branches/sso/of/of/app/views/projects/applied.html.erb
@@ -1,1 +1,1 @@
-<%= _("Your project creating request has been submitted. Please wait 72 hours for approving. We will notify you by email. <br/> If you have any questions, please contact us at #{ OPENFOUNDRY_SITE_ADMIN_EMAIL }.") %>
+<%= _("Project Applied") + OPENFOUNDRY_SITE_ADMIN_EMAIL + '.' %>
