--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
 <% content_for :head_content do -%>
+  <link rel="shortcut icon" href="http://www.openfoundry.org/images/favicon.ico" />
   <title><%= @module_name || controller.action_name %> 
          <%= (@project ? '- '+(@project.name||'') : '') %>
          - OpenFoundry
          <%= " __#{$$}__" if current_user.has_role?('site_admin')%></title>
-  <% bundle :name => "prototype" do %>
+  <%# bundle :name => "prototype" do %>
   <%= javascript_include_tag "prototype" %>
-  <% end %>
+  <%# end %>
   <%# bundle :name => "all", :packr_options => {:shrink_vars => true, :base62 => false} do %>
   <%= stylesheet_link_tag "scaffold", "openfoundry" %>
   <%= javascript_include_tag "effects", "application" %>
@@ -18,6 +19,17 @@
   <% if request.user_agent =~ /(msie 2|msie 3|msie 4|msie 5)/i %>
    <script>alert('Please use Internet Explorer 6 or above.');</script>
   <% end %>
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-5220412-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 <% end -%>
 
 <% content_for :header_content do -%>
@@ -88,16 +100,5 @@
   </div>
   <br clear="all" />
 </div>
-
-<script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-  try {
-    var pageTracker = _gat._getTracker("UA-5220412-1");
-    pageTracker._trackPageview();
-  } catch(err) {}
-</script>
 <% end -%>
 <%= render :file => 'layouts/integration' %> 
