--- a/branches/sso/of/of/app/views/webhosting/how_to_upload.html.erb
+++ b/branches/sso/of/of/app/views/webhosting/how_to_upload.html.erb
@@ -1,7 +1,7 @@
 <div id="MainBody">
     如何上傳檔案？
     <p>
-    對於每個在 <a href="http://<%=SSO_Host%>/of">OpenFoundry (<%=SSO_HOST%>)</a> 上開立的專案，
+    對於每個在 <a href="http://<%=SSO_HOST%>/of">OpenFoundry (<%=SSO_HOST%>)</a> 上開立的專案，
     我們提供網址為 <tt>ftp://ftp.openfoundry.org/[專案ID]/upload</tt> 的上傳空間，
     讓專案管理員可以自行放置與該專案預計釋出的檔案，再至網頁挑選檔案進行釋出，FTP提供了較穩定的上傳方式，
     改善了以往網頁無法續傳與上傳不穩定的問題。
