--- a/branches/sso/of/of/app/views/webhosting/index.html.erb
+++ b/branches/sso/of/of/app/views/webhosting/index.html.erb
@@ -1,4 +1,6 @@
 <div id="MainBody">
+    <h4><a href="webhosting/">專案網頁空間</a></h4>
+    <h4><a href="webhosting/how_to_upload">如何上傳檔案？</a></h4>
     <h4>什麼是網站代管(web hosting)服務?</h4>
     <p>
     對於每個在 <a href="http://<%=SSO_HOST%>/of">OpenFoundry (<%=SSO_HOST%>)</a> 上開立的專案，
