Add site_admin nsc link

--- a/branches/sso/of/of/app/views/site_admin/site_admin/index.html.erb
+++ b/branches/sso/of/of/app/views/site_admin/site_admin/index.html.erb
@@ -58,3 +58,9 @@ Agent: <%= request.user_agent%>
 </ul>
 <br/>
 
+<h2>NSC相關</h2>
+<ul>
+  <li><%= link_to _("Report status"), {:controller => '/nsc', :action => :report_status} %></li>
+  <li><%= link_to _("Download count"), {:controller => '/nsc', :action => :download_count} %></li>
+  <li><%= link_to _("Download List"), {:action => :nsc_download } %></li>
+</ul>
